# JRbot

./: .gitignore  .gitignore.txt  Admin  Admin.txt  Blacklist.txt  Dieren.txt  Examen_data.txt  Help.py  ID.txt  Last_user.txt  README.md  admincheck.py  bot.py  constants.py  othello_board.py  othello_main.py  othello_mcts_agent.py  othello_random_agent.py  othello_static_eval_agent.py  pyproject.toml  secret.html
.github/workflows/: test.yml
.spyproject/: workspace.ini
cogs/: activities.py  administration.py  amongus.py  date.py  daycounter.py  fun.py  othello.py  personal.py  poker.py  woordenketting.py
cogs/poker/: card.py  card_combinations.py
cogs_examples/: example.py  test.py
othello_files/: othello_board.py  othello_human_agent.py  othello_main.py  othello_mcts_agent.py  othello_static_eval_agent.py
poker/: card.py  card_combinations.py  constants.py  draw.py  elo.py  game.py  utils.py
poker/players/: bot.py  player.py  random_bot.py  static_eval_bot.py
tests/poker/: test_card_combinations.py  test_static_eval_bot.py
