[project]
name = "JRbot"
version = "0.1.0"
description = "General purpose discord bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "cogs"}

[tool.setuptools.packages.find]
where = ["cogs"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]